# MalGuard

./: .gitignore  README.md  pyproject.toml
malguard/: __init__.py  cli.py  correlate.py  dynamic.py  family_detection.py  ioc.py  report.py  static_analysis.py  utils.py
rules/: suspicious_trojan.yar
samples/: dynamic_events.jsonl  static_demo.txt
tests/: test_ioc.py  test_static_correlation.py
